--- a/codingchallenegejan8/bankdata/src/main/resources/application.properties
+++ b/codingchallenegejan8/bankdata/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Registering mysql Driver
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Connection url for the database "orchard_tracks"
-spring.datasource.url=jdbc:mysql://40.70.217.155:3306/bankdata
+spring.datasource.url=jdbc:mysql://http://40.70.217.155:3306/bankdata
 # Username and password
 spring.datasource.username = root
 spring.datasource.password = Welcome123
